# tecplot_reader

./: README.md  pyproject.toml
src/: tecplotreader.py
src/tecplot_reader/: tecplotreader.py
tests/: test_tecplot_reader.py
