[build-system]
requires = [
    "setuptools>=61.0", 
    "numpy", 
    "pandas"
]
build-backend = "setuptools.build_meta"

[project]
name = "tecplot_reader"
version = "0.0.1"
authors = [
  { name="Maximilian Hartmann", email="maxi.hartmann207@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
